welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:15: error: '=>' expected but 'case' found.
		case i if (i >= 3){
                ^